--- a/fonts/fontface.css
+++ b/fonts/fontface.css
@@ -1,12 +1,12 @@
 @font-face{
-  font-family:GT-Walsheim;
+  font-family:GT Walsheim;
   font-style:normal;
   font-weight:300;
   src:url(https://github.com/derkoosterveld/facts-2017/raw/master/fonts/gt-walsheim-web.a78cebcc.ttf) format("truetype")
 }
 
 @font-face{
-  font-family:GT-Walsheim;
+  font-family:GT Walsheim;
   font-style:normal;
   font-weight:300;
   src:url(https://github.com/derkoosterveld/facts-2017/raw/master/fonts/gt-walsheim-web.a545251b.woff) format("woff")
@@ -14,14 +14,14 @@
 }
 
 @font-face{
-  font-family:GT-Walsheim;
+  font-family:GT Walsheim;
   font-style:bold;
   font-weight:600;
   src:url(https://github.com/derkoosterveld/facts-2017/raw/master/fonts/gt-walsheim-bold-web.61ee4110.ttf) format("truetype")
 }
 
 @font-face{
-  font-family:GT-Walsheim;
+  font-family:GT Walsheim;
   font-style:bold;
   font-weight:600;
   src:url(https://github.com/derkoosterveld/facts-2017/raw/master/fonts/gt-walsheim-bold-web.390216da.woff) format("woff")
